# ckanext-atrtheme

./: MANIFEST.in  README.md  plugin.py  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/atrtheme/: plugin.py
ckanext/atrtheme/assets/: script.js  webassets.yml
ckanext/atrtheme/i18n/en/LC_MESSAGES/: ckanext-atrtheme.po
ckanext/atrtheme/public/: atrtheme.css
ckanext/atrtheme/templates/: base.html  error_document_template.html  footer.html
ckanext/atrtheme/templates/home/: layout1.html
ckanext/atrtheme/templates/home/snippets/: promoted.html  search.html
ckanext/atrtheme/templates/organization/: bulk_process.html
ckanext/atrtheme/templates/package/: read_base.html  resource_read.html
ckanext/atrtheme/templates/package/snippets/: package_basic_fields.html  resource_view.html
ckanext/atrtheme/templates/snippets/: group.html  organization.html  social.html
ckanext/atrtheme/templates/user/: login.html
ckanext/atrtheme/tests/: test_plugin.py
