[metadata]
name = ckanext-atrtheme
version = 0.0.1
description = Customized theme for ATR data portal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nzfarhad/ckanext-atrtheme
author = Sayed Farhad Nabizada
author_email = nzfarhad@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN ATR Central Database

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             atrtheme = ckanext.atrtheme.plugin:AtrthemePlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/atrtheme/i18n/ckanext-atrtheme.pot
width = 80

[init_catalog]
domain = ckanext-atrtheme
input_file = ckanext/atrtheme/i18n/ckanext-atrtheme.pot
output_dir = ckanext/atrtheme/i18n

[update_catalog]
domain = ckanext-atrtheme
input_file = ckanext/atrtheme/i18n/ckanext-atrtheme.pot
output_dir = ckanext/atrtheme/i18n
previous = true

[compile_catalog]
domain = ckanext-atrtheme
directory = ckanext/atrtheme/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
